--- a/MessageHubTransfer/MessageHubTransfer.csproj
+++ b/MessageHubTransfer/MessageHubTransfer.csproj
@@ -11,7 +11,12 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.0.15" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
